updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Im lookinf to start a new career</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I live in Tamworth in Birmingham</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like gaming and working out how things work </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Creating indie games</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I still live with my parents</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Im looking at learning something new to help me get where i want in life</p>
     </section>
 
     <footer id="footer">
